--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/graphql": "^10.1.6",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "4.6.1",
     "apollo-server-express": "^3.11.1",
     "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
+    "prisma": "^4.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
