chore: add `concurrently` and create `dev` script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "dev": "concurrently \"yarn:start:dev\" \"yarn:gen-typings\" \"yarn:prisma:generate\"",
     "gen-typings": "ts-node ./src/generate-typings",
+    "prisma:generate": "prisma generate --watch",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -52,6 +54,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
