--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.6.1",
     "apollo-server-express": "^3.11.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
     "prisma": "^4.6.1",
@@ -60,6 +62,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
+    "prisma-nestjs-graphql": "^17.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
