--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^2.0.0",
     "prisma": "^4.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
